# elpy

./: .bumpversion.cfg  .gitignore  README.rst  checks.nix  elpy-rpc.el  flake.nix  mypy.ini  requirements-rpc.txt  setup.cfg  setup.py
.github/workflows/: test.yml
elpy/: __main__.py  auto_pep8.py  blackutil.py  compat.py  jedibackend.py  pydocutils.py  refactorer.py  rpc.py  server.py  yapfutil.py
elpy/tests/: __init__.py  compat.py  support.py  test_auto_pep8.py  test_black.py  test_jedibackend.py  test_pydocutils.py  test_rpc.py  test_server.py  test_support.py  test_yapf.py
elpy/tests/use_cases/: completer.py  completion_repository.py  dependency_injection.py  presenters.py  refactorer.py  test_get_completion_docstring_use_case.py  test_get_completion_location.py  test_get_completions_use_case.py  test_refactor_rename_use_case.py
elpy/use_cases/: completion_repository.py  get_completion_docstring_use_case.py  get_completion_location.py  get_completions_use_case.py  interface.py  refactor_rename_use_case.py
nix/: pythonPackages.nix
nix/pythonPackages/: elpy.nix
scripts/: format-code  release  setup  start-clean-elpy.sh  test  test-benchmark
