[metadata]
name = elpy
version = 1.35.0
author = Jorgen Schaefer
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Natural Language :: English
    Topic :: Text Editors :: Emacs

[options]
packages = find:
install_requires =
    flake8
    toml

[wheel]
universal = 1

[flake8]
ignore = E203,E501,W503,E712
